delete bem folders

--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>onpoint</title>
-    <link rel="stylesheet" href="body/body.css">
-    <link rel="stylesheet" href="page/page.css">
-    <link rel="stylesheet" href="page/__page_leftarrow/page_leftarrow.css">
-    <link rel="stylesheet" href="page/__page_rightarrow/page_rightarrow.css">
-    <link rel="stylesheet" href="slide/slide.css">
-    <link rel="stylesheet" href="slide-top/slide-top.css">
-    <link rel="stylesheet" href="slide-top/__slide-top_pill/slide-top_pill.css">
-    <link rel="stylesheet" href="slide-top/__slide-top_patient/slide-top_patient.css">
-    <link rel="stylesheet" href="slide-bottom/slide-bottom.css">
+    <link rel="stylesheet" href="styles.css">
     
 </head>
 <body>
